Convert URL to use URI.toURL() (deprecated in java 20)